deploy/test_agent_job.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-service
  namespace: ymir
  labels:
    app: agent-service
spec:
  ports:
  - port: 5678
    name: server
  selector:
    app: ymir-agent-app
