deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  namespace: ymir
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: testnginx
          servicePort: 80
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: default-http-backend
          servicePort: 80
